ShopMeBackEnd(Code Order Module) 1. Perform ShippingRateREpose, Services and Address Validation 2. Ensure proper flow from one page to the order through redirects 3. Error. Thymleaf has a problem with checking ${param.redirect} with the if statement 4. proposed solution. update all thymeleaf packages to use #strings.hasText()

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
@@ -32,7 +32,12 @@
                             </th:block>
 
                             <th:block th:unless="${usePrimaryAddressAsDefault}">
-                                <a th:href="@{'/address_book/default/0'}">[Set as default]</a>
+                                <a th:unless="${param.redirect}" th:href="@{'/address_book/default/0'}">[Set as default]</a>
+
+<!--                                To Load default Address if the User param is Present, Throwing Error-->
+                          <!--      <a th:if="${param.redirect}"
+                                   th:href="@{'/address_book/default/0?redirect='+ ${param.redirect} }">[Set as default]</a>-->
+
                             </th:block>
 
                         </div>
@@ -68,7 +73,8 @@
                                 </th:block>
 
                                 <th:block th:unless="${address.defaultForShipping}">
-                                    <a th:href="@{'/address_book/default/' +${address.id} }">[Set as default]</a>
+                                    <a th:unless="${param.redirect}" th:href="@{'/address_book/default/' +${address.id} }">[Set as default]</a>
+                                    <a th:if="${param.redirect}" th:href="@{'/address_book/default/' +${address.id} + '?redirect='+ ${param.redirect} }">[Set as default]</a>
                                 </th:block>
 
                             </div>
