--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/cart/shopping_cart.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/cart/shopping_cart.html
@@ -61,7 +61,18 @@
                 <div th:replace="~{product/product_fragment :: showPricing(${estimatedTotal}, 'h3', 'estimatedTotal')}"></div>
             </div>
             <div class="mt-2">
-                <button class="btn btn-danger">Check Out</button>
+                <div th:if="${shippingSupported}">
+                    <button class="btn btn-danger">Check Out</button>
+                </div>
+                <div th:unless="${shippingSupported}">
+                    <div><span class="h5 text-warning">No Shipping Available for your location</span></div>
+                    <div th:if="${usePrimaryAddressAsDefault}">
+                        <a th:href="@{/customer(redirect=cart)}" class="h6">Update your Address</a>
+                    </div>
+                    <div th:unless="${usePrimaryAddressAsDefault}">
+                        <a th:href="@{/address_book(redirect=cart)}" class="h6">Use Another Shipping Address</a>
+                    </div>
+                </div>
             </div>
         </div>
 
