--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/address_book/addresses.html
@@ -32,11 +32,24 @@
                             </th:block>
 
                             <th:block th:unless="${usePrimaryAddressAsDefault}">
-                                <a th:unless="${param.redirect}" th:href="@{'/address_book/default/0'}">[Set as default]</a>
 
-<!--                                To Load default Address if the User param is Present, Throwing Error-->
-                          <!--      <a th:if="${param.redirect}"
-                                   th:href="@{'/address_book/default/0?redirect='+ ${param.redirect} }">[Set as default]</a>-->
+                                <th:block th:unless="${param.redirect}">
+                                    <a th:href="@{'/address_book/default/0'}">[Set as default]</a>
+                                </th:block>
+
+                                <th:block th:if="${param.redirect}">
+
+                                    <th:block th:if="${param.redirect[0]=='cart'}">
+                                        <a th:href="@{'/address_book/default/0?redirect=cart'}">[Set as default]</a>
+                                    </th:block>
+
+                                    <th:block th:if="${param.redirect[0]=='checkout'}">
+                                        <a th:href="@{'/address_book/default/0?redirect=checkout'}">[Set as default]</a>
+                                    </th:block>
+
+
+                                </th:block>
+
 
                             </th:block>
 
@@ -73,8 +86,26 @@
                                 </th:block>
 
                                 <th:block th:unless="${address.defaultForShipping}">
-                                    <a th:unless="${param.redirect}" th:href="@{'/address_book/default/' +${address.id} }">[Set as default]</a>
-                                    <a th:if="${param.redirect}" th:href="@{'/address_book/default/' +${address.id} + '?redirect='+ ${param.redirect} }">[Set as default]</a>
+
+                                    <th:block th:unless="${param.redirect}">
+                                        <a th:href="@{'/address_book/default/' +${address.id} }">[Set as default]</a>
+                                    </th:block>
+
+                                    <th:block th:if="${param.redirect}">
+
+                                        <th:block th:if="${param.redirect[0]=='cart'}">
+                                            <a th:href="@{'/address_book/default/' +${address.id} + '?redirect=cart' }">[Set
+                                                as default]</a>
+                                        </th:block>
+
+                                        <th:block th:if="${param.redirect[0]=='checkout'}">
+                                            <a th:href="@{'/address_book/default/' +${address.id} + '?redirect=checkout' }">[Set
+                                                as default]</a>
+                                        </th:block>
+
+                                    </th:block>
+
+
                                 </th:block>
 
                             </div>
