--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/checkout/checkout.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/checkout/checkout.html
@@ -8,6 +8,8 @@
 
     <div class="text-center">
         <h1>CheckOut</h1>
+        <span th:text="${paypalClientId}"></span>
+        <span th:text="${currencyCode}"></span>
     </div>
 
     <div class="row m-1">
@@ -35,12 +37,17 @@
                 <div class="card-header"><h5>Payment Method</h5></div>
                 <div class="card-body">
                     <div th:if="${checkoutInfo.codSupported}">
-                        <p>
-                            <input type="radio" /> Cash on Delivery (COD)
-                            &nbsp;
-                            <button class="btn btn-primary">Place Order with COD</button>
-                        </p>
+                        <form th:action="@{/place_order}" method="post">
+                            <p>
+                                <input type="radio" id="radioCOD" value="COD" name="paymentMethod" /> Cash on Delivery (COD)
+                                &nbsp;
+                                <button class="btn btn-primary d-none" id="buttonSubmit" type="submit">Place Order with COD</button>
+                            </p>
+                        </form>
                     </div>
+
+                    <div id="paypal-button-container"></div>
+
                 </div>
             </div>
 
@@ -99,8 +106,78 @@
     <div th:replace="~{fragments/modal :: modal_dialog}"></div>
 
 </div>
-
+<script th:src="@{https://sandbox.paypal.com/sdk/js(client-id=${paypalClientId}, currency=${currencyCode})}"></script>
 <script type="text/javascript">
+    contextPath = "[[@{/}]]";
+    let csrfHeaderName = "[[${_csrf.headerName}]]";
+    let csrfValue = "[[${_csrf.token}]]";
+
+    $(document).ready(function(){
+        $('#radioCOD').on('click', function(e){
+            $('#buttonSubmit').removeClass('d-none');
+        });
+    });
+
+    paypal.Buttons({
+        enableStandardCardFields: true,
+        createOrder: function (data, actions){
+            //setup a transaction
+            return actions.order.create({
+                intent: 'CAPTURE', // make payment immediately
+                payer:{
+                    name: {
+                        given_name: "[[${customer.firstName}]]",
+                        surname: "[[${customer.lastName}]]"
+                    },
+                    address: {
+                        address_line_1 : "[[${customer.addressLine1}]]",
+                        address_line_2 : "[[${customer.addressLine2}]]",
+                        admin_area_1 : "[[${customer.state}]]",
+                        admin_area_2 : "[[${customer.city}]]",
+                        postal_code : "[[${customer.postalCode}]]",
+                        country_code : "[[${customer.country.code}]]",
+                    },
+                    email_address: "[[${customer.email}]]",
+                    phone: {
+                        phone_type: "MOBILE",
+                        phone_number: {
+                            national_number: "[[${customer.phoneNumber}]]"
+                        }
+                    }
+                },
+
+                purchase_units: [{
+                    amount:{
+                        value: "[[${checkoutInfo.paymentTotal4PayPal}]]",
+                        currency_code: "[[${currencyCode}]]"
+                    }
+                }],
+                application_context:{
+                    shipping_preference: "NO_SHIPPING"
+                }
+            });
+        },
+        onApprove: function(data, actions){
+            //buyer approved a payment
+            return actions.order.capture().then(function (details) {
+                console.log(details);
+                orderId = details.id;
+                totalAmount = details.purchase_units[0].amount.value;
+
+                alert('Transaction completed. Order ID ' + orderId + ', Amount paid : '+totalAmount);
+            });
+        },
+        onCancel: function (data){
+            //buy cancelled payment
+            alert('Payment cancelled by the Buyer');
+        },
+        onError: function(err){
+            //error that prevents buyer from doing checkout
+            alert('Soemthig wrong happened');
+        }
+    }).render('#paypal-button-container');
+
+
 </script>
 <script type="text/javascript" th:src="@{/js/common.js}"></script>
 <script type="text/javascript" th:src="@{/js/jquery.number.min.js}"></script>
