--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/checkout/checkout.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/checkout/checkout.html
@@ -47,6 +47,10 @@
                     </div>
 
                     <div id="paypal-button-container"></div>
+                    <form th:action="@{/process_paypal_order}" method="post" id="paypalForm">
+                        <input type="hidden" name="orderId" id="orderId">
+                        <input type="hidden" name="paymentMethod" value="PAYPAL">
+                    </form>
 
                 </div>
             </div>
@@ -112,6 +116,11 @@
     let csrfHeaderName = "[[${_csrf.headerName}]]";
     let csrfValue = "[[${_csrf.token}]]";
 
+    function validateOrder(orderId){
+        $('#orderId').val(orderId);
+        $('#paypalForm').submit();
+    }
+
     $(document).ready(function(){
         $('#radioCOD').on('click', function(e){
             $('#buttonSubmit').removeClass('d-none');
@@ -160,11 +169,10 @@
         onApprove: function(data, actions){
             //buyer approved a payment
             return actions.order.capture().then(function (details) {
-                console.log(details);
-                orderId = details.id;
-                totalAmount = details.purchase_units[0].amount.value;
 
-                alert('Transaction completed. Order ID ' + orderId + ', Amount paid : '+totalAmount);
+                orderId = details.id;
+                validateOrder(orderId);
+
             });
         },
         onCancel: function (data){
@@ -173,7 +181,7 @@
         },
         onError: function(err){
             //error that prevents buyer from doing checkout
-            alert('Soemthig wrong happened');
+            alert('Soemthing wrong happened');
         }
     }).render('#paypal-button-container');
 
