--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_details_modal.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_details_modal.html
@@ -22,6 +22,11 @@
                    aria-controls="shipping" aria-selected="false">Shipping</a>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link" id="track-tab" data-toggle="tab" href="#track" role="tab"
+                   aria-controls="track" aria-selected="false">Track</a>
+            </li>
+
         </ul>
 
         <div class="tab-content" id="myTabContent">
@@ -224,6 +229,42 @@
                         <input type="text" class="form-control" th:value="${order.postalCode}" readonly/>
                     </div>
                 </div>
+
+            </div>
+
+            <div class="tab-pane" id="track" role="tabpanel" aria-labelledby="track-tab">
+
+                <div class="full-details">
+                   <table class="table table-striped table-bordered table-hover table-responsive-sm">
+                       <thead class="thead-dark">
+                       <tr>
+                           <th>Time</th>
+                           <th>Status</th>
+                           <th>Notes</th>
+                       </tr>
+                       </thead>
+                       <tbody>
+                       <tr th:each="track: ${order.orderTracks}">
+                           <td>[[${track.updatedTime}]]</td>
+                           <td>[[${track.status}]]</td>
+                           <td>[[${track.notes}]]</td>
+                       </tr>
+                       </tbody>
+                   </table>
+               </div>
+
+                <div class="less-details">
+                   <th:block th:each="track: ${order.orderTracks}">
+                       <div class="row p-1">
+                           <span>[[${track.updatedTime}]]</span>
+                       </div>
+                       <div class="row p-1 ml-3">
+                           <span>&nbsp;&nbsp;<b>[[${track.status}]]</b>: <i>[[${track.notes}]]</i> </span>
+                       </div>
+                       <div class="row">&nbsp;</div>
+                   </th:block>
+                </div>
+
 
             </div>
 
