ShopmeBackEnd(Order Module - 2) 1. Add Product to an Order in the Order Module 2. Implement Search order View and Controller 3. Javascript to enable search 4. Updated WebSecurityConfig 5.implemented Repo Method

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
@@ -87,6 +87,10 @@
         </th:block>
     </div>
 
+    <a id="linkAddProduct"
+       th:href="@{/orders/search_product}"
+       class="btn btn-success">Add a Product</a>
+
 
 </div>
 
