--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+>
 <head th:replace="~{fragments/fragments :: head(${pageTitle})}"></head>
 <body>
 <div class="container-fluid">
@@ -64,6 +64,11 @@
 
     </form>
 
+    <div th:replace="fragments/modal :: modal_dialog"></div>
+    <div th:replace="orders/add_product_modal :: content"></div>
+
+    <footer th:replace="~{fragments/fragments :: footer}"></footer>
+
 
 </div>
 <script type="text/javascript">
@@ -79,6 +84,7 @@
 <script th:src="@{/js/common_form.js}"></script>
 <script th:src="@{/js/jquery.number.min.js}"></script>
 <script th:src="@{/js/order_form_overview_products.js}"></script>
+<script th:src="@{/js/order_form_add_product.js}"></script>
 <script th:src="@{/js/common_form_country_state.js}"></script>
 </body>
 </html>
