--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
@@ -6,7 +6,7 @@
     <div id="productList">
         <th:block th:each="detail, status : ${order.orderDetail}">
             <div class="border rounded p-1" th:with="product = ${detail.product}">
-
+                <input type="hidden" name="productId" th:value="${product.id}" class="hiddenProductId" />
                 <div class="row">
                     <div class="col-1">
                         <div>[[${status.count}]]</div>
