--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/search_product.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/search_product.html
@@ -31,10 +31,10 @@
     </div>
 
     <div th:replace="~{fragments/fragments :: pagination(${totalPages}, ${currentPage}, ${totalItems}, ${startCount}, ${endCount})}"></div>
-
+    <div th:replace="fragments/modal :: modal_dialog_close"></div>
 
 </div>
-
+<script th:src="@{/js/common_form.js}"></script>
 <script type="text/javascript">
     $(document).ready(function () {
         handleLinkProduct();
@@ -44,8 +44,14 @@
         $(".linkProduct").on('click', function (e) {
             e.preventDefault();
             let productId = $(this).attr("pid")
-            let productName = $('#pname' + productId).text();
-            alert(productName);
+            let productName = $('#pname' + productId).val();
+
+            if(window.parent.isProductAlreadyAdded(productId)){
+                showWarningModal("The product "+ productName+" was already added.");
+            }else{
+                window.parent.addProduct(productId, productName);
+            }
+
         });
     }
 </script>
