--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
@@ -5,11 +5,18 @@
 
     <div id="productList">
         <th:block th:each="detail, status : ${order.orderDetail}">
-            <div class="border rounded p-1" th:with="product = ${detail.product}">
+            <div class="border rounded p-1"
+                 th:with="product = ${detail.product}"
+                 th:id="'row'+${status.count}">
                 <input type="hidden" name="productId" th:value="${product.id}" class="hiddenProductId" />
                 <div class="row">
                     <div class="col-1">
-                        <div>[[${status.count}]]</div>
+                        <div class="divCount">[[${status.count}]]</div>
+                        <div><a class="linkRemove"
+                                href="" th:rowNumber="${status.count}">
+                            <i class="fa fa-trash icon-dark"></i>
+                        </a>
+                        </div>
                     </div>
                     <div class="col-3">
                         <img th:src="@{${product.mainImagePath}}" class="img-fluid">
@@ -82,7 +89,7 @@
 
             </div>
 
-            <div class="row">&nbsp;</div>
+            <div th:id="'blankLine'+${status.count}" class="row">&nbsp;</div>
 
         </th:block>
     </div>
