--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_products.html
@@ -8,6 +8,7 @@
             <div class="border rounded p-1"
                  th:with="product = ${detail.product}"
                  th:id="'row'+${status.count}">
+                <input type="hidden" name="detailId" th:value="${detail.id}" />
                 <input type="hidden" name="productId" th:value="${product.id}" class="hiddenProductId" />
                 <div class="row">
                     <div class="col-1">
@@ -34,6 +35,7 @@
                             <td>
                                 <input type="text"
                                        required
+                                       name="productDetailCost"
                                        class="form-control m-1 cost-input"
                                        th:rowNumber="${status.count}"
                                        th:value="${detail.productCost}"
@@ -46,6 +48,7 @@
                             <td>
                                 <input type="number"
                                        class="form-control m-1 quantity-input"
+                                       name="productQuantity"
                                        th:id="'quantity'+${status.count}"
                                        th:rowNumber="${status.count}"
                                        th:value="${detail.quality}"
@@ -58,6 +61,7 @@
                             <td>
                                 <input type="text" class="form-control m-1 price-input"
                                        th:id="'price' + ${status.count}"
+                                       name="productPrice"
                                        th:rowNumber="${status.count}"
                                        th:value="${detail.unitPrice}" style="max-width: 140px" />
                             </td>
@@ -69,6 +73,7 @@
                                 <input type="text"
                                        readonly="readonly"
                                        class="form-control m-1 subtotal-output"
+                                       name="productSubtotal"
                                        th:id="'subtotal' + ${status.count}"
                                        th:value="${detail.subtotal}" style="max-width: 140px" />
                             </td>
@@ -78,6 +83,7 @@
                             <td>Shipping Cost:</td>
                             <td>
                                 <input type="text" class="form-control m-1 ship-input"
+                                       name="productShipCost"
                                        th:value="${detail.shippingCost}" style="max-width: 140px" />
                             </td>
                         </tr>
