--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_shipping.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_form_shipping.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
 </head>
@@ -51,7 +51,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Address Line 2: </label>
         <div class="col-sm-10">
-            <input type="text" class="form-control" th:field="*{addressLine2}" required/>
+            <input type="text" class="form-control" th:field="*{addressLine2}" th:value="*{addressLine2}"/>
         </div>
     </div>
 
@@ -65,6 +65,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label">Country: </label>
         <div class="col-sm-10">
+            <input type="hidden" name="countryName" id="countryName" th:value="${order.country}">
             <select id="country" class="form-control">
                 <option th:each="aCountry: ${listCountries}" th:value="${aCountry.id}"
                         th:selected="${aCountry.name == order.country}">
