ShopMeBackEnd(Order Management for Shipper) 1. Code shipper UI 2. Security configuration 3. Additional Method to determine item status

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/orders.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/orders.html
@@ -89,6 +89,7 @@
                          </span>
                         </a>
                         <div th:replace="~{fragments/fragments :: edit_delete_fn(${order.id})}"></div>
+                        <div th:replace="~{fragments/fragments :: detail_edit_delete_fn(${order.id})}"></div>
                     </div>
                 </div>
 
