--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_details_modal.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/orders/order_details_modal.html
@@ -38,44 +38,50 @@
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Order ID: </label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" th:value="${order.id}" readonly />
+                        <input type="text" class="form-control" th:value="${order.id}" readonly/>
                     </div>
                 </div>
 
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Customer: </label>
-                    <div class="col-sm-10">
-                        <input type="text" class="form-control" th:value="${order.customer.fullName}" readonly/>
-                    </div>
-                </div>
+                <th:block th:if="${isVisibleForAdminOrSalesperson}">
 
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Product Cost: </label>
-                    <div class="col-sm-10">
-                        <div th:replace="fragments/fragments :: currency_input(${order.productCost})">Cost</div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">Customer: </label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" th:value="${order.customer.fullName}" readonly/>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Subtotal: </label>
-                    <div class="col-sm-10">
-                        <div th:replace="fragments/fragments :: currency_input(${order.subtotal})">Subtotal</div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">Product Cost: </label>
+                        <div class="col-sm-10">
+                            <div th:replace="fragments/fragments :: currency_input(${order.productCost})">Cost</div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Shipping Cost: </label>
-                    <div class="col-sm-10">
-                        <div th:replace="fragments/fragments :: currency_input(${order.shippingCost})">Shipping Cost</div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">Subtotal: </label>
+                        <div class="col-sm-10">
+                            <div th:replace="fragments/fragments :: currency_input(${order.subtotal})">Subtotal</div>
+                        </div>
                     </div>
-                </div>
 
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label">Tax: </label>
-                    <div class="col-sm-10">
-                        <div th:replace="fragments/fragments :: currency_input(${order.tax})">Tax</div>
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">Shipping Cost: </label>
+                        <div class="col-sm-10">
+                            <div th:replace="fragments/fragments :: currency_input(${order.shippingCost})">Shipping
+                                Cost
+                            </div>
+                        </div>
                     </div>
-                </div>
+
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label">Tax: </label>
+                        <div class="col-sm-10">
+                            <div th:replace="fragments/fragments :: currency_input(${order.tax})">Tax</div>
+                        </div>
+                    </div>
+
+                </th:block>
 
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Total: </label>
@@ -84,12 +90,14 @@
                     </div>
                 </div>
 
-                <div class="form-group row">
-                    <label class="col-sm-2 col-form-label"></label>
-                    <div class="col-sm-10">
-                        TOTAL = Subtotal + Shipping Cost + Tax
+                <th:block th:if="${isVisibleForAdminOrSalesperson}">
+                    <div class="form-group row">
+                        <label class="col-sm-2 col-form-label"></label>
+                        <div class="col-sm-10">
+                            TOTAL = Subtotal + Shipping Cost + Tax
+                        </div>
                     </div>
-                </div>
+                </th:block>
 
                 <div class="form-group row">
                     <label class="col-sm-2 col-form-label">Payment Method: </label>
@@ -130,18 +138,22 @@
                             <div class="text-wrap">
                                 <b>[[${product.name}]]</b>
                             </div>
-                            <div>
-                                Product Costs: <div th:replace="fragments/fragments :: format_currency(${detail.productCost})"></div>
-                            </div>
-                            <div>
-                                Subtotal: [[${detail.quality}]] X
-                                <div th:replace="fragments/fragments :: format_currency(${detail.unitPrice})"></div>
-                                =
-                                <div th:replace="fragments/fragments :: format_currency(${detail.subtotal})"></div>
-                            </div>
-                            <div>
-                                Shipping Costs: <div th:replace="fragments/fragments :: format_currency(${detail.shippingCost})"></div>
-                            </div>
+                            <th:block th:if="${isVisibleForAdminOrSalesperson}">
+                                <div>
+                                    Product Costs:
+                                    <div th:replace="fragments/fragments :: format_currency(${detail.productCost})"></div>
+                                </div>
+                                <div>
+                                    Subtotal: [[${detail.quality}]] X
+                                    <div th:replace="fragments/fragments :: format_currency(${detail.unitPrice})"></div>
+                                    =
+                                    <div th:replace="fragments/fragments :: format_currency(${detail.subtotal})"></div>
+                                </div>
+                                <div>
+                                    Shipping Costs:
+                                    <div th:replace="fragments/fragments :: format_currency(${detail.shippingCost})"></div>
+                                </div>
+                            </th:block>
                         </div>
 
                     </div>
@@ -235,34 +247,34 @@
             <div class="tab-pane" id="track" role="tabpanel" aria-labelledby="track-tab">
 
                 <div class="full-details">
-                   <table class="table table-striped table-bordered table-hover table-responsive-sm">
-                       <thead class="thead-dark">
-                       <tr>
-                           <th>Time</th>
-                           <th>Status</th>
-                           <th>Notes</th>
-                       </tr>
-                       </thead>
-                       <tbody>
-                       <tr th:each="track: ${order.orderTracks}">
-                           <td>[[${track.updatedTime}]]</td>
-                           <td>[[${track.status}]]</td>
-                           <td>[[${track.notes}]]</td>
-                       </tr>
-                       </tbody>
-                   </table>
-               </div>
+                    <table class="table table-striped table-bordered table-hover table-responsive-sm">
+                        <thead class="thead-dark">
+                        <tr>
+                            <th>Time</th>
+                            <th>Status</th>
+                            <th>Notes</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="track: ${order.orderTracks}">
+                            <td>[[${track.updatedTime}]]</td>
+                            <td>[[${track.status}]]</td>
+                            <td>[[${track.notes}]]</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
 
                 <div class="less-details">
-                   <th:block th:each="track: ${order.orderTracks}">
-                       <div class="row p-1">
-                           <span>[[${track.updatedTime}]]</span>
-                       </div>
-                       <div class="row p-1 ml-3">
-                           <span>&nbsp;&nbsp;<b>[[${track.status}]]</b>: <i>[[${track.notes}]]</i> </span>
-                       </div>
-                       <div class="row">&nbsp;</div>
-                   </th:block>
+                    <th:block th:each="track: ${order.orderTracks}">
+                        <div class="row p-1">
+                            <span>[[${track.updatedTime}]]</span>
+                        </div>
+                        <div class="row p-1 ml-3">
+                            <span>&nbsp;&nbsp;<b>[[${track.status}]]</b>: <i>[[${track.notes}]]</i> </span>
+                        </div>
+                        <div class="row">&nbsp;</div>
+                    </th:block>
                 </div>
 
 
