--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/modal.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/modal.html
@@ -31,6 +31,29 @@
     </div>
 </div>
 
+<div class="modal fade text-center" id="confirmModal" th:fragment="modal_dialog_confirm">
+    <div class="modal-dialog">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h4 class="modal-title">Update Confirmation</h4>
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+            </div>
+
+            <div class="modal-body">
+                <span id="confirmText"></span>
+            </div>
+
+            <div class="modal-footer">
+                <a class="btn btn-success confirm-dialog" id="yesButton" style="color: white;">Yes</a>
+                <button type="button" class="btn btn-danger" data-dismiss="modal" id="noButton">No</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
 <div class="modal fade text-center" id="modalDialog" th:fragment="modal_dialog_close">
     <div class="modal-dialog">
         <div class="modal-content">
