--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/static/styles/style.css
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/static/styles/style.css
@@ -1,22 +1,61 @@
 *.icon-white {
-	color: white;
+    color: white;
 }
 
 *.icon-silver {
-	color: silver;
+    color: silver;
 }
 
 *.icon-green {
-	color: green;
+    color: green;
 }
 
 *.icon-dark {
-	color: grey;
+    color: grey;
 }
-.cursor-hand{
-	cursor: pointer;
-	text-decoration: none;
+
+.cursor-hand {
+    cursor: pointer;
+    text-decoration: none;
 }
-.cursor-hand:hover{
-	text-decoration: none;
+
+.cursor-hand:hover {
+    text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+    /*small screen*/
+    div.full-details {
+        display: none
+    }
+
+    div.less-details {
+        display: block;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    /*medium screen*/
+    div.full-details {
+        display: block
+    }
+
+    div.less-details {
+        display: none;
+    }
+
+    .hideable-column {
+        display: none
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    /*small screen*/
+    div.less-details {
+        display: none;
+    }
+
+    .hideable-column {
+        display: table-cell
+    }
 }
