--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -28,9 +28,12 @@
                     <a href="" class="nav-link">Shipping and Delivery</a>
                 </li>
 
-                <li class="nav-item">
-                    <a th:href="@{/login}" class="nav-link">Login</a>
-                </li>
+                <th:block sec:authorize="!isAuthenticated()">
+                    <li class="nav-item">
+                        <a th:href="@{/login}" class="nav-link">Login</a>
+                    </li>
+                </th:block>
+
 
                 <li class="nav-item">
                     <a href="" class="nav-link" th:href="@{/register}">Registers</a>
