--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/general.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/settings/general.html
@@ -29,7 +29,7 @@
         <div class="form-group row">
             <label class="col-sim-4 col-form-label">Site Logo: </label>
             <div class="col-sm-8">
-                <img th:src="@{${SITE_LOGO}}"
+                <img th:src="@{${S3_BASE_URI+SITE_LOGO}}"
                      alt="Site Logo Preview"
                      id="imageView"
                      height="70"
