ShopMeBackEnd(Sales Module) 1. Code Sales Report by Date part 3 2. Add Reports HTML 3. Add Google Charts and Scripts for viewing Reports 4. Modified Navigation

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
@@ -86,7 +86,7 @@
                                         th:href="@{/orders}" sec:authorize="hasAnyAuthority('Admin','Salesperson', 'Shipper')">Orders</a>
                 </li>
 
-                <li class="nav-item"><a class="nav-link" th:href="@{/report}"
+                <li class="nav-item"><a class="nav-link" th:href="@{/reports}"
                                         sec:authorize="hasAnyAuthority('Admin','Salesperson')">Sales
                     Report</a></li>
                 <li class="nav-item"><a class="nav-link"
