--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reports/sales_report_by_date.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reports/sales_report_by_date.html
@@ -7,6 +7,10 @@
                 class="btn btn-primary button-sales-by-date m-1">Last 7 days</button>
         <button period="last_28_days"
                 class="btn btn-light button-sales-by-date m-1">Last 28 days</button>
+        <button period="last_6_months"
+                class="btn btn-light button-sales-by-date m-1">Last 6 Months</button>
+        <button period="last_year"
+                class="btn btn-light button-sales-by-date m-1">Last Year</button>
     </div>
     <div id="chart_sales_by_date" class="mt-3 justify-content-center"></div>
     <div class="row justify-content-center">
