--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reports/sales_report_by_date.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reports/sales_report_by_date.html
@@ -11,7 +11,17 @@
                 class="btn btn-light button-sales-by-date m-1">Last 6 Months</button>
         <button period="last_year"
                 class="btn btn-light button-sales-by-date m-1">Last Year</button>
+        <button class="btn btn-light button-sales-by-date m-1">Custom Date Range</button>
     </div>
+
+    <form>
+        <div id="divCustomDateRange" class="d-none">
+            From Date: <input type="date" id="startDate"/>&nbsp;
+            To Date: <input type="date" id="endDate"/> &nbsp;
+            <button type="button" class="btn btn-dark" id="buttonViewReportByDateRange">View</button>
+        </div>
+    </form>
+
     <div id="chart_sales_by_date" class="mt-3 justify-content-center"></div>
     <div class="row justify-content-center">
 
