--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reports/reports.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reports/reports.html
@@ -36,7 +36,7 @@
             </div>
 
             <div class="tab-pane drop p-3" id="category" role="tabpanel" aria-labelledby="category-tab">
-                <h2>Sales by Category</h2>
+                <div th:replace="reports/sales_report_fragment :: content('_category')"></div>
             </div>
 
             <div class="tab-pane drop p-3" id="product" role="tabpanel" aria-labelledby="product-tab">
@@ -77,6 +77,8 @@
         th:src="@{/js/sales_report_common.js}"></script>
 <script type="text/javascript"
         th:src="@{/js/sales_report_by_date.js}"></script>
+<script type="text/javascript"
+        th:src="@{/js/sales_report_by_category.js}"></script>
 <script type="text/javascript"
         th:src="@{/js/jquery.number.min.js}"></script>
 </body>
