--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reports/reports.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/reports/reports.html
@@ -40,7 +40,7 @@
             </div>
 
             <div class="tab-pane drop p-3" id="product" role="tabpanel" aria-labelledby="product-tab">
-                <h2>Sales by Product</h2>
+                <div th:replace="reports/sales_report_fragment :: content('_product')"></div>
             </div>
 
 
@@ -69,7 +69,7 @@
 
 
     $(document).ready(function(){
-        google.charts.load('current', {'packages':['corechart']});
+        google.charts.load('current', {'packages':['corechart','table']});
         google.charts.setOnLoadCallback(loadSalesReportByDate);
     });
 </script>
@@ -79,6 +79,8 @@
         th:src="@{/js/sales_report_by_date.js}"></script>
 <script type="text/javascript"
         th:src="@{/js/sales_report_by_category.js}"></script>
+<script type="text/javascript"
+        th:src="@{/js/sales_report_by_product.js}"></script>
 <script type="text/javascript"
         th:src="@{/js/jquery.number.min.js}"></script>
 </body>
