ShopMeBackEnd(Reviews Modules) 1. CRUD Views and Pages

--- a/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
+++ b/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/fragments/navigation.html
@@ -68,9 +68,17 @@
                         <a class="nav-link dropdown-toggle navdrop-element" data-toggle="dropdown"
                            th:href="@{/products}">Products</a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" th:href="@{'/products/new'}">Create New</a>
+                            <a class="dropdown-item" sec:authorize="hasAnyAuthority('Admin', 'Editor')" th:href="@{'/products/new'}">Create New</a>
                             <a class="dropdown-item" th:href="@{'/products'}">View All</a>
+                            <a class="dropdown-item"
+                               sec:authorize="hasAuthority('Admin')" th:href="@{'/reviews'}">Reviews</a>
                         </div>
+                    </li>
+                </th:block>
+
+                <th:block sec:authorize="hasAuthority('Assitant')">
+                    <li class="nav-item">
+                        <a th:href="@{/reviews}" class="nav-link">Reviews</a>
                     </li>
                 </th:block>
 
