--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/fragments.html
@@ -32,6 +32,38 @@
 
 
 </head>
+<head th:fragment="head_replace(title, remove)" th:remove="${remove}">
+    <meta charset="ISO-8859-1">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
+
+    <title>[[${title}]] - [[${SITE_NAME}]]</title>
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/styles/style.css}"/>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript"
+            th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+
+    <link rel="stylesheet" type="text/css"
+          th:href="@{/webjars/font-awesome/5.15.1/css/all.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/style.css}"/>
+    <script type="text/javascript"
+            th:src="@{/webjars/font-awesome/5.15.1/js/all.min.js}"></script>
+    <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+    <script type="text/javascript"
+            th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+    <script type="text/javascript"
+            th:src="@{/js/common.js}"></script>
+    <link rel="stylesheet" th:href="@{/styles/rte_theme_default.css}">
+    <script type="text/javascript" th:src="@{/js/all_plugins.js}"></script>
+    <script type="text/javascript" th:src="@{/js/rte.js}"></script>
+
+
+
+</head>
 
 <body>
 
