--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/navigation.html
@@ -5,7 +5,9 @@
 <div th:fragment="header_menu">
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <a class="navbar-brand" th:href="@{/}"> <img
-                th:src="@{${S3_BASE_URI+SITE_LOGO}}"/>
+                th:src="@{${SITE_LOGO}}"/>
+            <!--<a class="navbar-brand" th:href="@{/}"> <img
+                    th:src="@{${S3_BASE_URI+SITE_LOGO}}"/>-->
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#topNavbar, #searchNavBar"
