--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
@@ -1,6 +1,30 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: head(${pageTitle})}"></head>
+<head>
+    <head th:replace="~{fragments :: head_replace(${pageTitle}, 'tag')}"></head>
+    <link th:href="@{/rating-star/css/star-rating.css}" media="all" rel="stylesheet" type="text/css">
+    <link th:href="@{/rating-star/themes/krajee-svg/theme.css}" media="all" rel="stylesheet" type="text/css">
+    <script th:href="@{/rating-star/themes/krajee-svg/theme.js}" type="text/javascript"></script>
+    <script th:href="@{/rating-star/js/star-rating.js}" type="text/javascript"></script>
+    <!---->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/css/star-rating.css" media="all" rel="stylesheet" type="text/css" />
+
+    <!-- optionally if you need to use a theme, then include the theme file as mentioned below -->
+    <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/themes/krajee-svg/theme.css" media="all" rel="stylesheet" type="text/css" />
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/js/star-rating.js" type="text/javascript"></script>
+
+    <!-- optionally if you need to use a theme, then include the theme file as mentioned below -->
+    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/themes/krajee-svg/theme.js"></script>
+
+    <!-- optionally if you need translation for your language then include locale file as mentioned below (replace LANG.js with your locale specific file) -->
+    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/js/locales/LANG.js"></script>
+    <!---->
+</head>
+
 <body>
 <div class="container-fluid">
     <div th:replace="~{navigation :: header_menu}"></div>
@@ -27,6 +51,17 @@
         <div class="col-sm">
             <div>
                 <h2>[[${product.name}]]</h2>
+            </div>
+            <div class="row ml-1">
+                <div class="col-xs">
+                    <input type="number"
+                           class="product-detail-rating-star rating"
+                           dir="ltr" data-size="md"
+                    th:value="${product.averageRating}" readonly />
+                </div>
+                <div class="col-xs ml-1 mt-3">
+                    [[${product.reviewCount}]] rating(s)
+                </div>
             </div>
             <div>
                 <span>Brand: [[${product.brand.name}]]</span>
@@ -103,9 +138,12 @@
     <div th:replace="~{product/images_carousel :: content}"></div>
     <div th:replace="~{navigation :: footer_menu}"></div>
 
+    <script th:src="@{/js/quantity_control.js}"></script>
+    <script th:src="@{/js/add_to_cart.js}"></script>
+    <script th:src="@{/js/common.js}"></script>
     <script type="text/javascript">
-        contextPath="[[@{/}]]";
-        productId="[[${product.id}]]";
+        contextPath = "[[@{/}]]";
+        productId = "[[${product.id}]]";
         csrfHeaderName = "[[${_csrf.headerName}]]";
         csrfValue = "[[${_csrf.token}]]";
         $(document).ready(function () {
@@ -123,13 +161,21 @@
                 $("#carouselModal").modal();
                 let imageIndex = parseInt(bigImage.attr("index"));
                 $("#carouselExampleIndicators").carousel(imageIndex);
-            })
-        });
-    </script>
+            });
 
-    <script th:src="@{/js/quantity_control.js}"></script>
-    <script th:src="@{/js/add_to_cart.js}"></script>
-    <script th:src="@{/js/common.js}"></script>
+
+
+        });
+
+        $(".product-detail-rating-star").rating({
+            displayOnly: true,
+            hoverOnClera: false,
+            showCaption: false,
+            theme: 'krajee-svg'
+        });
+
+
+    </script>
 
     <style>
         @media (min-width: 768px) {
