--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/search_result.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/search_result.html
@@ -1,6 +1,32 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments :: head(${pageTitle})}"></head>
+<head>
+    <head th:replace="~{fragments :: head_replace(${pageTitle}, 'tag')}"></head>
+    <link th:href="@{/rating-star/css/star-rating.css}" media="all" rel="stylesheet" type="text/css">
+    <link th:href="@{/rating-star/themes/krajee-svg/theme.css}" media="all" rel="stylesheet" type="text/css">
+    <script th:href="@{/rating-star/themes/krajee-svg/theme.js}" type="text/javascript"></script>
+    <script th:href="@{/rating-star/js/star-rating.js}" type="text/javascript"></script>
+    <!---->
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/css/star-rating.css" media="all"
+          rel="stylesheet" type="text/css"/>
+
+    <!-- optionally if you need to use a theme, then include the theme file as mentioned below -->
+    <link href="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/themes/krajee-svg/theme.css"
+          media="all" rel="stylesheet" type="text/css"/>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/js/star-rating.js"
+            type="text/javascript"></script>
+
+    <!-- optionally if you need to use a theme, then include the theme file as mentioned below -->
+    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/themes/krajee-svg/theme.js"></script>
+
+    <!-- optionally if you need translation for your language then include locale file as mentioned below (replace LANG.js with your locale specific file) -->
+    <script src="https://cdn.jsdelivr.net/gh/kartik-v/bootstrap-star-rating@4.0.7/js/locales/LANG.js"></script>
+    <!---->
+</head>
 <body>
 <div class="container-fluid">
     <div th:replace="~{navigation :: header_menu}"></div>
@@ -22,5 +48,14 @@
     <div th:replace="~{navigation :: footer_menu}"></div>
 
 </div>
+<script type="text/javascript">
+    $(".product-detail-rating-star").rating({
+
+        displayOnly: true,
+        hoverOnClera: false,
+        showCaption: false,
+        theme: 'krajee-svg'
+    });
+</script>
 </body>
 </html>
