shopeMeFrontEnd(Reviews Modules) 1. Reviews List Page

--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_top_reviews.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_top_reviews.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="row m-1 ml-3">
-        <a href="">View all [[${product.reviewCount}]] ratings</a>
+        <a th:href="@{'/ratings/'+${product.alias}}">View all [[${product.reviewCount}]] ratings</a>
     </div>
 
     <div class="row">
