--- a/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
+++ b/ShopmeWebParent/ShopmeFrontEnd/src/main/resources/templates/product/product_detail.html
@@ -144,6 +144,7 @@
     <script th:src="@{/js/quantity_control.js}"></script>
     <script th:src="@{/js/add_to_cart.js}"></script>
     <script th:src="@{/js/common.js}"></script>
+    <script th:src="@{/js/common_rating.js}"></script>
     <script type="text/javascript">
         contextPath = "[[@{/}]]";
         productId = "[[${product.id}]]";
@@ -169,23 +170,7 @@
                 $("#carouselExampleIndicators").carousel(imageIndex);
             });
 
-            formatRatingNumber();
-
         });
-
-        $(".product-detail-rating-star").rating({
-            displayOnly: true,
-            hoverOnClera: false,
-            showCaption: false,
-            theme: 'krajee-svg'
-        });
-
-        function formatRatingNumber(){
-            ratingText = $('#ratingNumber').text();
-            formattedRating = $.number(ratingText, 2, decimalSeperator, thousandSeperator);
-            $('#ratingNumber').text(formattedRating);
-
-        }
 
     </script>
 
